# Phone-Menu-Transcriber

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
phone_menu_transcriber/: __init__.py  __main__.py  api.py  cli.py  extraction.py  models.py  transcription.py
src/: main.py
tests/: conftest.py  test_api.py  test_cli.py  test_extraction.py  test_integration_ollama.py  test_models.py
